2010-06-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* scripts/check_jni_methods.sh.in: Don't use diff -U.
	Adapt grep regex, ignore file and problem message.

2010-06-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-01-18  Andreas Tobler  <andreast@fgznet.ch>

	* tools/Makefile.am (GJDOC_EX): Use find -name pattern -prune -o.
	* tools/Makefile.in: Regenerate.

2010-06-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-03-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR libgcj/38251
	* tools/Makefile.am (dist-hook): Prune .svn directories in asm and
	classes copies.
	* tools/Makefile.in: Regenerate.

	Revert:
	2008-11-05  Andrew Haley  <aph@redhat.com>

	* tools/Makefile.am (UPDATE_TOOLS_ZIP, CREATE_TOOLS_ZIP): Exclude
	.svn direcories.

2010-05-04  Andrew Haley  <aph@redhat.com>

	* lib/gen-classlist.sh.in: Use absolute pathnames for all the
	directory names in the output file.

2010-04-29  Jakub Jelinek  <jakub@redhat.com>

	PR other/43620
	* configure.ac (AM_INIT_AUTOMAKE): Add no-dist option.
	* Makefile.in: Regenerated.

2010-04-29  Release Manager

	* GCC 4.4.4 released.

2010-01-21  Release Manager

	* GCC 4.4.3 released.

2009-10-22  Richard Guenther  <rguenther@suse.de>

	PR cp-tools/39177
	* tools/gnu/classpath/tools/jar/Creator.java (writeCommandLineEntries):
	Do not use uninitialized manifest.
	* tools/classes/gnu/classpath/tools/jar/Creator.class: Re-generated.

2009-10-15  Release Manager

	* GCC 4.4.2 released.

2009-07-22  Release Manager

	* GCC 4.4.1 released.

2009-04-21  Release Manager

	* GCC 4.4.0 released.

2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add VM updates.
	
2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Updated.
	* configure.ac:
	Bump to 0.98 proper.

2009-02-05  Andrew Haley  <aph@redhat.com>

	PR libgcj/38861